Add SQLite database for chat history and expand tool capabilities
- Integrated better-sqlite3 for persistent chat history storage
- Added new tools: chat_perplexity, get_documentation, find_apis, check_deprecated_code
- Enhanced search functionality with detail level options
- Implemented database methods for storing and retrieving chat messages
- Updated README with comprehensive tool descriptions and usage examples
- Added TypeScript types and improved error handling

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "type": "module",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.4.1",
+    "better-sqlite3": "^11.8.1",
     "puppeteer": "^24.2.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^22.13.1",
     "typescript": "^5.7.3"
   }
