chore: convert from pnpm to Bun runtime
- Remove pnpm-specific files (pnpm-lock.yaml, pnpm-workspace.yaml)
- Update package.json scripts to use Bun instead of Node.js
- Add Bun runtime badge to README.md
- Update installation and configuration instructions
- Test MCP server functionality with Bun

--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "main": "build/main.js",
   "scripts": {
     "build": "tsc",
-    "start": "node build/main.js",
+    "start": "bun build/main.js",
     "test": "vitest",
     "test:run": "vitest run",
     "test:coverage": "vitest run --coverage",
     "test:watch": "vitest --watch",
     "lint": "biome lint . --write",
     "format": "biome format . --write",
-    "update-docs-date": "node scripts/update-docs-date.js"
+    "dev": "bun run build && bun run start"
   },
   "keywords": ["mcp", "perplexity", "puppeteer", "ai", "research"],
   "author": "sm-moshi",
