refactor: replace better-sqlite3 with bun:sqlite for database operations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "noPropertyAccessFromIndexSignature": true,
     "verbatimModuleSyntax": true,
     "resolveJsonModule": true,
-    "types": ["vitest/globals", "node"]
+    "types": ["vitest/globals", "node", "bun-types"]
   },
   "include": ["src/**/*"],
   "exclude": ["docs/", "build/", "node_modules/"]
