--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@types/jsdom": "21.1.7",
     "@types/mozilla__readability": "0.4.2",
     "axios": "1.10.0",
-    "better-sqlite3": "11.10.0",
     "jsdom": "26.1.0",
     "minimist": "1.2.8",
     "prune": "0.0.2",
@@ -34,11 +33,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@types/better-sqlite3": "7.6.13",
     "@types/minimist": "1.2.5",
     "@types/node": "22.15.30",
     "@vitest/coverage-v8": "3.2.2",
-
+    "bun-types": "latest",
     "typescript": "5.8.3",
     "vitest": "3.2.2"
   }
